--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@clerk/nextjs": "^6.35.3",
     "@hookform/resolvers": "^5.2.2",
     "@jsmastery/utils": "^1.0.2",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@sentry/nextjs": "^10.27.0",
     "@supabase/supabase-js": "^2.84.0",
     "@vapi-ai/web": "^2.5.1",
     "class-variance-authority": "^0.7.1",
